--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin 'tailwind-scrollbar';
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 * {
